llm-d/ai-grid/grid/deploy-envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '16'
  labels:
    app: grid-envoy
  name: grid-envoy
  namespace: ai-grid-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grid-envoy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grid-envoy
    spec:
      enableServiceLinks: false
      containers:
      - args:
        - -c
        - /etc/envoy/envoy.yaml
        - --service-cluster
        - ai-grid-demo
        - --component-log-level
        - ext_proc:trace,connection:debug,upstream:debug,router:debug
        image: docker.io/envoyproxy/envoy:v1.31-latest
        imagePullPolicy: IfNotPresent
        name: envoy
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/envoy
          name: config
        - mountPath: /etc/grid/server
          name: server-tls
          readOnly: true
        - mountPath: /etc/grid/ca
          name: grid-ca
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: grid-envoy-config
        name: config
      - name: server-tls
        secret:
          defaultMode: 420
          secretName: grid-envoy-server-tls
      - name: grid-ca
        secret:
          defaultMode: 420
          secretName: grid-ca
