llm-d/ai-grid/grid/svc-envoy.yaml
apiVersion: v1
kind: Service
metadata:
  name: grid-envoy
  namespace: ai-grid-demo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: grid-envoy
  type: ClusterIP
